--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="utf-8">
   <title></title>
   <style>
-    
+   body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0;
+    } 
 .lds-ring,
 .lds-ring div {
   box-sizing: border-box;
@@ -19,8 +26,8 @@
   box-sizing: border-box;
   display: block;
   position: absolute;
-  width: 64px;
-  height: 64px;
+  width: 84px;
+  height: 84px;
   margin: 8px;
   border: 8px solid currentColor;
   border-radius: 50%;
